--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
     </div>
 
     <div id="vault-ui" class="hidden min-h-screen">
-        <header class="py-10 text-center">
-            <h1 id="user-header" class="text-[9px] font-black tracking-[0.5em] text-cyan-500 uppercase">Vault</h1>
-            <button onclick="location.reload()" class="text-[7px] text-white/20 mt-2 underline italic">LOGOUT</button>
+        <header class="py-12 text-center relative">
+            <div id="user-display-top" class="text-[10px] font-bold text-cyan-400/60 tracking-widest mb-2"></div>
+            <h1 class="text-[14px] font-black tracking-[0.8em] text-white uppercase">Personal Archive</h1>
+            
+            <button onclick="logout()" class="logout-btn mt-6 px-10 py-3 rounded-full border border-red-500/30 text-red-500 text-[10px] font-black tracking-widest hover:bg-red-500 hover:text-white transition-all duration-500">
+                <i class="fa-solid fa-power-off mr-2"></i> LOGOUT SYSTEM
+            </button>
         </header>
 
         <div class="w-full h-[250px] flex items-center justify-center overflow-hidden mb-6">
@@ -43,22 +47,32 @@
         </div>
     </div>
 
+    <div id="token-popup" class="fixed inset-0 z-[1100] bg-black/80 backdrop-blur-sm hidden flex items-center justify-center p-6">
+        <div id="popup-content" class="bg-[#111] p-8 rounded-[35px] border border-cyan-500/20 text-center w-full max-w-xs shadow-2xl">
+            <div id="token-input-area">
+                <div class="text-cyan-500 mb-4"><i class="fa-solid fa-shield-halved fa-2x"></i></div>
+                <h2 class="text-white font-bold mb-4 tracking-widest text-sm">GITHUB TOKEN</h2>
+                <input type="password" id="upload-token" placeholder="Paste Token Here" class="w-full bg-black border border-white/10 p-4 rounded-2xl mb-4 text-center outline-none focus:border-cyan-500 transition-all">
+                <button onclick="uploadFiles()" class="w-full bg-cyan-600 py-4 rounded-2xl font-bold text-[10px] tracking-widest uppercase">Start Upload</button>
+                <button onclick="closePopup()" class="mt-4 text-white/20 text-[9px] uppercase">Cancel</button>
+            </div>
+            
+            <div id="upload-progress" class="hidden">
+                <h2 class="text-cyan-500 font-black text-xs tracking-widest mb-4">UPLOADING...</h2>
+                <div class="w-full bg-white/5 h-2 rounded-full overflow-hidden mb-2">
+                    <div id="progress-bar" class="h-full bg-cyan-500 w-0 transition-all duration-300"></div>
+                </div>
+                <p id="progress-text" class="text-[9px] text-white/40 italic">0%</p>
+            </div>
+        </div>
+    </div>
+
     <div id="viewer" class="fixed inset-0 z-[1000] bg-black/95 hidden flex flex-col items-center justify-center p-4 backdrop-blur-md">
         <button onclick="closeViewer()" class="absolute top-8 right-8 text-white/50 text-3xl"><i class="fa-solid fa-xmark"></i></button>
         <div id="viewer-content" class="max-w-4xl w-full flex justify-center"></div>
         <div class="flex gap-12 mt-10">
             <button id="viewer-save" class="text-cyan-500 flex flex-col items-center gap-2"><i class="fa-solid fa-download text-2xl"></i><span class="text-[8px] font-bold">SAVE</span></button>
             <button id="viewer-del" class="text-red-500 flex flex-col items-center gap-2"><i class="fa-solid fa-trash text-2xl"></i><span class="text-[8px] font-bold">DELETE</span></button>
-        </div>
-    </div>
-
-    <div id="token-popup" class="fixed inset-0 z-[1100] bg-black/80 backdrop-blur-sm hidden flex items-center justify-center p-6">
-        <div class="bg-[#111] p-8 rounded-[35px] border border-cyan-500/20 text-center w-full max-w-xs shadow-2xl">
-            <div class="text-cyan-500 mb-4"><i class="fa-solid fa-shield-halved fa-2x"></i></div>
-            <h2 class="text-white font-bold mb-4 tracking-widest text-sm">SECURITY TOKEN</h2>
-            <input type="password" id="upload-token" placeholder="Enter Token" class="w-full bg-black border border-white/10 p-4 rounded-2xl mb-4 text-center outline-none focus:border-cyan-500 transition-all">
-            <button onclick="uploadFiles()" class="w-full bg-cyan-600 py-4 rounded-2xl font-bold text-xs tracking-widest">VERIFY & UPLOAD</button>
-            <button onclick="closePopup()" class="mt-4 text-white/20 text-[9px] uppercase tracking-widest">CANCEL</button>
         </div>
     </div>
 
