--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 
     <div id="vault-ui" class="hidden min-h-screen">
         <header class="py-12 text-center relative">
-            <div id="user-display-top" class="text-[10px] font-bold text-cyan-400/60 tracking-widest mb-2"></div>
+            <div id="user-display-top" class="text-[10px] font-bold text-cyan-400/60 tracking-widest mb-2 uppercase"></div>
             <h1 class="text-[14px] font-black tracking-[0.8em] text-white uppercase">Personal Archive</h1>
             
-            <button onclick="logout()" class="logout-btn mt-6 px-10 py-3 rounded-full border border-red-500/30 text-red-500 text-[10px] font-black tracking-widest hover:bg-red-500 hover:text-white transition-all duration-500">
+            <button onclick="logout()" class="glow-btn mt-6 px-10 py-3 rounded-full border border-red-500/50 text-red-500 text-[10px] font-black tracking-widest transition-all duration-300">
                 <i class="fa-solid fa-power-off mr-2"></i> LOGOUT SYSTEM
             </button>
         </header>
 
-        <div class="w-full h-[250px] flex items-center justify-center overflow-hidden mb-6">
+        <div class="w-full h-[280px] flex items-center justify-center overflow-hidden mb-6">
             <div id="carousel-3d" class="carousel-3d"></div>
         </div>
 
@@ -48,22 +48,33 @@
     </div>
 
     <div id="token-popup" class="fixed inset-0 z-[1100] bg-black/80 backdrop-blur-sm hidden flex items-center justify-center p-6">
-        <div id="popup-content" class="bg-[#111] p-8 rounded-[35px] border border-cyan-500/20 text-center w-full max-w-xs shadow-2xl">
+        <div class="bg-[#111] p-8 rounded-[35px] border border-cyan-500/20 text-center w-full max-w-xs shadow-2xl">
             <div id="token-input-area">
                 <div class="text-cyan-500 mb-4"><i class="fa-solid fa-shield-halved fa-2x"></i></div>
                 <h2 class="text-white font-bold mb-4 tracking-widest text-sm">GITHUB TOKEN</h2>
-                <input type="password" id="upload-token" placeholder="Paste Token Here" class="w-full bg-black border border-white/10 p-4 rounded-2xl mb-4 text-center outline-none focus:border-cyan-500 transition-all">
+                <input type="password" id="upload-token" placeholder="Paste Token" class="w-full bg-black border border-white/10 p-4 rounded-2xl mb-4 text-center outline-none focus:border-cyan-500 transition-all">
                 <button onclick="uploadFiles()" class="w-full bg-cyan-600 py-4 rounded-2xl font-bold text-[10px] tracking-widest uppercase">Start Upload</button>
                 <button onclick="closePopup()" class="mt-4 text-white/20 text-[9px] uppercase">Cancel</button>
             </div>
             
             <div id="upload-progress" class="hidden">
-                <h2 class="text-cyan-500 font-black text-xs tracking-widest mb-4">UPLOADING...</h2>
-                <div class="w-full bg-white/5 h-2 rounded-full overflow-hidden mb-2">
-                    <div id="progress-bar" class="h-full bg-cyan-500 w-0 transition-all duration-300"></div>
+                <h2 class="text-cyan-500 font-black text-[12px] tracking-[0.3em] mb-4 animate-pulse">UPLOADING...</h2>
+                <div class="w-full bg-white/5 h-3 rounded-full overflow-hidden mb-3 border border-white/5 p-[2px]">
+                    <div id="progress-bar" class="h-full bg-cyan-500 rounded-full w-0 transition-all duration-300"></div>
                 </div>
-                <p id="progress-text" class="text-[9px] text-white/40 italic">0%</p>
+                <div class="flex justify-between items-center">
+                    <p id="progress-text" class="text-[10px] text-white/40 italic font-bold">0% Completed</p>
+                    <p class="text-[9px] text-red-500 font-black tracking-widest animate-bounce">DON'T EXIT</p>
+                </div>
             </div>
+        </div>
+    </div>
+
+    <div id="success-modal" class="fixed inset-0 z-[2000] bg-black/90 hidden flex items-center justify-center p-6 backdrop-blur-md">
+        <div class="bg-[#111] p-10 rounded-[40px] border border-cyan-500/30 text-center w-full max-w-xs shadow-2xl scale-up">
+            <div class="text-5xl mb-6 animate-bounce">🚀</div>
+            <h2 class="text-white font-black tracking-[0.2em] mb-8 text-[10px] uppercase">SUCCESS</h2>
+            <button onclick="closeSuccessModal()" class="w-full bg-cyan-600 py-4 rounded-2xl font-bold text-[10px] tracking-widest">OK</button>
         </div>
     </div>
 
